--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#Custom
+.frame.png
+test.py
+stockfish_15.1_linux_x64/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +132,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
